Add master menu detail function
